Revision history for lua-MessagePack

0.3.4
	handle long double

0.3.3  Sat May 30 16:30:00 2015
	shadow _ENV (see PR #12)
	unsigned packer becomes the default for integer (see issue #13)
	set_integer marked as deprecated
	handle nil as table index (see issue #14)

0.3.2  Wed Jan 14 20:30:00 2015
	add variant for Lua 5.3
	compat Lua 5.3

0.3.1  Sun May  4 18:30:00 2014
	add option set_array'always_as_map'
	fix issue #6

0.3.0  Sun Sep  1 15:30:00 2013
	compliant with specifications v5

0.2.2  Sun Aug 25 09:30:00 2013
	fix packer when downcast double->float

0.2.1  Thu Nov 29 19:30:00 2012
	add set_array

0.2.0  Sat Nov 17 15:30:00 2012
	INCOMPATIBILITY : now, unpacker accepts a ltn12.source instead of a file

0.1.0  Sun Nov 11 09:30:00 2012
	First release
