@@ -2,6 +2,7 @@ Revision history for lua-MessagePack
 
 0.3.4
 	handle long double
+	handle NaN (like nil) as table index
 
 0.3.3  Sat May 30 16:30:00 2015
 	shadow _ENV (see PR #12)
